# sfml-cmake

./: .gitignore  CMakeLists.txt  Character.cpp  Character.h  Engine.cpp  Engine.h  JSCharacter.cpp  JSCharacter.h  Makefile  README.md  Util.cpp  Util.h  character.cpp  character.h  main.cpp  sf_v8.cpp  sf_v8.h  sfml-cmake.pro  v8wrap.cpp  v8wrap.h
js/: robot1.js  robot2.js
resources/icons/: osx.icns
